Fixed word-spacing

--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,7 @@ p,h2{
     font-family: 'Montserrat', sans-serif;
     color: black;
     font-weight: bold;
-    text-align: center;
-    word-spacing: 2rem;
-    
+    text-align: center; 
     
 }
 .section{height: 80vh;}
@@ -50,6 +48,6 @@ p,h2{
         font-size: 1rem;
     }
 
-p,h2{font-size: 1.5rem; word-spacing: 0.5rem;}
+p,h2{font-size: 1.5rem;}
 
 }
